--- a/cat-homepage.html
+++ b/cat-homepage.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <link href="css/main-page.css" rel="stylesheet" type="text/css" />
+    <link href="css/styles.css" rel="stylesheet" type="text/css" />
     <title> Narem's Daily Blog.</title>
   </head>
   <body>
     <h1> Tuesday, Oct 11 2022</h1>
     <p> Matt has made an attempt to create a bond between me and the new intruders of the house... I will have to leave a present in his shoe later...</p>
-    <p> agenda for today</p>
+    <p2> agenda for today</p2>
     <ul>
       <li>sleep</li>
       <li>sleep</li>
@@ -25,6 +25,6 @@
       <li>sleep</li>
       <li>sleep</li>
     </ul>
-    <img src="img/Narem.jpg" alt="picture of a cat" width="300" height="600">
+    <img src="img/Narem.jpg" alt="picture of a cat" width="400" height="700">
   </body>
 </html>
